fixed the issue with the nav not showing

--- a/resources/css/components/user-menu.css
+++ b/resources/css/components/user-menu.css
@@ -23,6 +23,6 @@
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 }
 
-.hidden {
+.user-menu-hidden {
     display: none;
 }
